--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>myTunes - bring music to your life</title>
-  <link rel="icon" href="D:\Web Development\myTunes Project\images\music.png">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="music.png">
+  <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat+Subrayada:wght@400;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 
 <body>
   <div class="nav-bar">
-    <img class="logo" src="D:\Web Development\myTunes Project\images\music.png" alt="logo">
+    <img class="logo" src="music.png" alt="logo">
     <ul class="bar-li">
       <li class="myTunes">
         <a href="#showcase">myTunes</a>
@@ -53,7 +53,7 @@
       three-month trial with no commitment, and cancel anytime.</p>
     <a class="btn" href="#">Start Your Trial Now</a>
     <p class="p3">Orange Music is available in myTunes, and for iOS and Android devices.</p>
-    <img src="D:\Web Development\myTunes Project\images\mockup1.png" alt="middle-image">
+    <img src="mockup1.png" alt="middle-image">
   </div>
 
   <div id="video" class="three-container">
@@ -64,7 +64,7 @@
     <br>
     <a class="btn2" href="#">Read More</a>
     <br>
-    <img class="pencil" src="D:\Web Development\myTunes Project\images\mockup2.png" alt="bottom-image">
+    <img class="pencil" src="mockup2.png" alt="bottom-image">
   </div>
 
   <div class="four-container">
@@ -76,7 +76,7 @@
   </div>
 
   <div id="gift-cards" class="fifth-container">
-    <img class="giftcard" src="D:\Web Development\myTunes Project\images\cards.png" alt="giftcards-image">
+    <img class="giftcard" src="cards.png">
     <h2 class="gc">Gift Cards</h2>
     <p>Give friends and family an App Store & myTunes Gift Card and they can choose anything from the App Store, the myTunes Store, and Orange Books,2 or put it toward Orange Music subscriptions and myCloud storage plans. You can also give them an
       Orange Store Gift Card that can be used to buy Orange hardware and accessories at any Orange Store or at www.orange.com.
